--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ body{
 
 #sidebar {
   position: fixed;
-  width: 250px;
+  width: 10%;
   height: 100%;
   background: #57626F;
   border-right: 4px solid #E0E5EA;
